@@ -6,3 +6,4 @@ v 0.0.1 (unreleased)
 * Brand new design (jvanbaarsen)
 * Scope app name uniqueness to server and not entire IC (jvanbaarsen)
 * Make sure service containers are destroyed when removing an app Fixes: #80 (jvanbaarsen)
+* Schedule Health_checks in their own queue and run them in IC. (jvanbaarsen)
